<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    app:cardElevation="5dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@mipmap/bg_share" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_more_share"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/title_sub_size" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_shake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@mipmap/gridview_icon_09s_shake" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_more_shake"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/title_sub_size" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@mipmap/bg_about" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_more_about"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/title_sub_size" />


        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>