<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="5dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/tv_dialog_create_newsonglist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/sohot_free_title"
            android:textColor="@color/skin_colorPrimary"
            android:textSize="@dimen/title_size" />


        <LinearLayout
            android:id="@+id/ll_ed_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_dialog_create_newsonglist_title"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_dialog_new_songname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint=""
                        android:text="@string/shot_accept_desc"
                        android:textColor="@color/common_text_color"
                        android:textColorHint="@color/common_line"
                        android:textSize="@dimen/title_sub_size" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/commond_line_height"
                        android:layout_marginRight="@dimen/activity_horizontal_margin2"
                        android:background="@color/dialog_text_color"
                        android:visibility="gone" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_dialog_name_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/40"
                    android:textColor="@color/dialog_text_color"
                    android:textSize="@dimen/title_sub_middle_size"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll_ed_container"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_submit"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/dialog_selector"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/accept"
                android:textColor="@color/common_red_color"
                android:textSize="@dimen/title_sub_middle_size" />


            <TextView
                android:id="@+id/tv_dialog_cancle"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/dialog_selector"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/dialog_text_color"
                android:textSize="@dimen/title_sub_middle_size" />


        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>